--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
   </head>
   <body>
     <h1>Planet data table</h1>
+    <table>
+        <thead>
+            <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
+            <th>Name</th>
+            <th>Mass 10<sup>24</sup>kg</th>
+            <th>Diameter (km)</th>
+            <th>Density (kg/m<sup>3</sup>)</th>
+            <th>Gravity (m/s<sup>2</sup>)</th>
+            <th>Length of day (hours)</th>
+            <th>Distance from sun (10<sup>6</sup>km)</th>
+            <th>Mean temperature (°C)</th>
+            <th>Number of moons</th>
+            <th>Notes</th>
+        </thead>
+    </table>
   </body>
 </html>
